fix align center job

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -65,12 +65,16 @@ header {
 }
 
 .profile__name {
-  font-size  : 36px;
+  font-size  : 2.2rem;
   font-weight: 700;
   margin-top : 20rem;
 }
 
 .profile__job {
+  display        : flex;
+  justify-content: center;
+  align-items    : center;
+  flex-direction : column;
   font-weight: 400;
-  font-size  : 18px;
+  font-size  : 1rem;
 }
